--- a/Linux.html
+++ b/Linux.html
@@ -9,7 +9,7 @@
         <div style="background-image: url('https://wallpaperplay.com/walls/full/0/6/6/145656.jpg');">
       <nav id="nav">
               <ul style="border: solid;border-color:#003366;background-color:#FFFFFF">
-  <a href="Operating systems.html">Operating systems</a>    |
+  <a href="index.html">Operating systems</a>    |
   <a href="Intro.Html">Introduction</a>   |
   <a href="Mac.html">Mac OS</a>    |
   <a href="Linux.html">Linux</a>    |
