--- a/Intro.html
+++ b/Intro.html
@@ -9,7 +9,8 @@
       <nav id="nav">
               <ul style="border: solid;border-color:#003366;background-color:#FFFFFF">
   <a href="index.html">Operating systems</a>    |
-  <a href="Intro.Html">Introduction</a>   |
+  <a href="Intro.html">Introduction</a>   |
+  <a href="Windows.html">Microsoft windows</a>   |
   <a href="Mac.html">Mac OS</a>    |
   <a href="Linux.html">Linux</a>    |
   <a href="Comparison.html">Comparison</a> 
