--- a/Intro.html
+++ b/Intro.html
@@ -10,7 +10,7 @@
               <ul style="border: solid;border-color:#003366;background-color:#FFFFFF">
   <a href="index.html">Operating systems</a>    |
   <a href="Intro.html">Introduction</a>   |
-  <a href="Windows.html">Microsoft windows</a>   |
+  <a href="Windows.html">Microsoft Windows</a>   |
   <a href="Mac.html">Mac OS</a>    |
   <a href="Linux.html">Linux</a>    |
   <a href="Comparison.html">Comparison</a> 
